--- a/app/src/main/res/layout/activity_hw18.xml
+++ b/app/src/main/res/layout/activity_hw18.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".hw18.HW18Activity">
 
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_act18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <Button
+                android:id="@+id/btn_act18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/todo"/>
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
