Доделано отображение победителей

--- a/app/src/main/res/layout/activity_hw18.xml
+++ b/app/src/main/res/layout/activity_hw18.xml
@@ -17,7 +17,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_act18"
+                android:id="@+id/tv_act18_vegetable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
@@ -27,6 +27,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/todo"/>
+
+            <TextView
+                android:id="@+id/tv_act18_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Регионы со 100т сбором каждого урожая:" />
+
+            <TextView
+                android:id="@+id/tv_act18_victory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" " />
 
         </LinearLayout>
     </ScrollView>
