--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,72 +39,44 @@
         android:id="@+id/HW14Fragment"
         android:name="com.dsd.homework.hw14.HW14Fragment"
         android:label="fragment_hw14"
-        tools:layout="@layout/fragment_hw14" >
-        <action
-            android:id="@+id/action_HW14Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_hw14" />
     <fragment
         android:id="@+id/HW15Fragment"
         android:name="com.dsd.homework.hw15.HW15Fragment"
         android:label="fragment_hw15"
-        tools:layout="@layout/fragment_hw15" >
-        <action
-            android:id="@+id/action_HW15Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_hw15" />
     <fragment
         android:id="@+id/HW22Fragment"
         android:name="com.dsd.homework.hw22.HW22Fragment"
         android:label="fragment_hw22"
-        tools:layout="@layout/fragment_hw22" >
-        <action
-            android:id="@+id/action_HW22Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_hw22" />
     <fragment
         android:id="@+id/HW16Fragment"
         android:name="com.dsd.homework.hw16.HW16Fragment"
         android:label="fragment_hw16"
-        tools:layout="@layout/fragment_hw16" >
-        <action
-            android:id="@+id/action_HW16Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_hw16" />
     <fragment
         android:id="@+id/HW17Fragment"
         android:name="com.dsd.homework.hw17.HW17Fragment"
         android:label="fragment_hw17"
-        tools:layout="@layout/fragment_hw17" >
-        <action
-            android:id="@+id/action_HW17Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_hw17" />
     <fragment
         android:id="@+id/HW19Fragment"
         android:name="com.dsd.homework.hw19.HW19Fragment"
         android:label="fragment_hw19"
-        tools:layout="@layout/fragment_hw19" >
-        <action
-            android:id="@+id/action_HW19Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_hw19" />
     <fragment
         android:id="@+id/HW23Fragment"
         android:name="com.dsd.homework.hw23.HW23Fragment"
         android:label="fragment_hw24"
         tools:layout="@layout/fragment_hw23" >
         <action
-            android:id="@+id/action_HW23Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            android:id="@+id/action_HW23Fragment_to_HW19Fragment2"
+            app:destination="@id/HW19Fragment" />
     </fragment>
     <fragment
         android:id="@+id/HW18Fragment"
         android:name="com.dsd.homework.hw18.HW18Fragment"
         android:label="fragment_hw18"
-        tools:layout="@layout/fragment_hw18" >
-        <action
-            android:id="@+id/action_HW18Fragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_hw18" />
 </navigation>
